# winnan

./: .pylintrc  .travis.yml  .yapfignore  LICENSE  MANIFEST.in  README.rst  THIRD-PARTY-NOTICES  appveyor.yml  setup.cfg  setup.py
tests/: context.py  mark.py  test_file_stdlib.py  test_flags.py  test_io_stdlib.py  test_winnan.py
winnan/: __init__.py  flags.py  io_shim.py  os_shim.py
winnan/_cython/: fcntl.pyx
