[aliases]
test = pytest

[metadata]
name = winnan
description = More consistent file handling across POSIX and Windows systems
long_description = file: README.rst
url = https://github.com/visemet/winnan
maintainer = Max Hirschhorn
maintainer_email = max.hirschhorn@mongodb.com
license = MIT License
license_files =
    LICENSE
    THIRD-PARTY-NOTICES
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = False
packages = winnan
install_requires =
    pypiwin32 ; sys_platform == 'win32' or sys_platform == 'cygwin'
python_requires = >=3.7
tests_require = pytest >= 4.0.2

[testenv]
commands = {envpython} setup.py test

[tool:pytest]
addopts =
    -Werror::ResourceWarning

[tox:tox]
envlist = py37
skip_missing_interpreters = True
