[aliases]
test = pytest

[metadata]
name = winnan
description = More consistent file handling across POSIX and Windows systems
long_description = file: README.rst
url = https://github.com/visemet/winnan
maintainer = Max Hirschhorn
maintainer_email = max.hirschhorn@mongodb.com
license = MIT License
license_files =
    LICENSE
    THIRD-PARTY-NOTICES
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = False
packages =
    winnan
    winnan._cython
install_requires =
    pypiwin32 ; sys_platform == 'win32' or sys_platform == 'cygwin'
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
tests_require = pytest >= 4.0.2

[testenv]
commands = {envpython} setup.py test

[tool:pytest]
# ResourceWarning messages likely represent leaked file descriptors; however, we cannot specify
# -Werror::ResourceWarning because ResourceWarning is an unrecognized warning category in Python 2.
# We therefore instead treat all warnings as errors. However, the tests were written to be
# compatible with both Python 2 and Python 3, and therefore make use of deprecated features. We
# explicitly suppress certain DeprecationWarning messages.
addopts =
    -Werror
    "-Wignore:'U' mode is deprecated:DeprecationWarning"
    "-Wignore:Please use assertRegex instead.:DeprecationWarning"
    "-Wignore:tostring() is deprecated. Use tobytes() instead.:DeprecationWarning"

[tox:tox]
envlist = py27, py35, py36, py37
skip_missing_interpreters = True

[yapf]
based_on_style = pep8
column_limit = 100
split_before_named_assigns = False
